--- a/app/src/main/res/layout/add_new_company_dialog.xml
+++ b/app/src/main/res/layout/add_new_company_dialog.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-
-        <variable
-            name="model"
-            type="com.ed.android.mocktask.viewmodels.NewCompanyDialogViewModel" />
-    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,9 +17,10 @@
                 android:id="@+id/et_employee_count"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/emp_count"
+                android:inputType="number"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text="@={model.mEmpCount}" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -39,14 +34,14 @@
                 android:id="@+id/et_employee_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/cmp_name"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text="@={model.mCompanyName}" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/text_input_emp_address"
+            android:id="@+id/text_input_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -54,9 +49,9 @@
                 android:id="@+id/et_emp_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/cmp_address"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text="@={model.mCompanyAddress}" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -69,11 +64,47 @@
                 android:id="@+id/et_company_claps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/cmp_claps"
+                android:inputType="number"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text="@={model.mCompanyClaps}" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_emp_dept"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/et_emp_dept"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/emp_dept"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_emp_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/et_emp_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/emp_age"
+                android:inputType="number"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
 
     </LinearLayout>
 </layout>
